--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
             </button>
 
             <div class="sidebar">
-                <a href="#" class="active">
+                <a href="home.html" class="active">
                     <span class="material-symbols-rounded">dashboard</span>
                     <h4>Dashboard</h4>
                 </a>
