--- a/metas.html
+++ b/metas.html
@@ -81,12 +81,19 @@
             <!-- Seção Educação -->
             <div class="container-educacao">
                 <details>
-                    <summary>educação</summary>
+                    
+                    <summary>Educação</summary>
+                    
                     <div class="saldo">
+                        <div class="banner">
+                            <a href="#">
+                                <img src="./img/bookmark.svg" alt="">
+                            </a>
+                        </div>
                         <span>Meta:</span>
-                        <p>R$600,00</p> <br>
+                        <p>R$600,00</p>
                         <span>Já gastou:</span>
-                        <p>R$290,00</p> <br>
+                        <p>R$290,00</p>
                         <span>Limite ultrapassado:</span>
                         <p>R$0,00</p>
                     </div>
@@ -101,12 +108,17 @@
             <!-- Seção Laser -->
             <div class="container-laser">
                 <details>
-                    <summary>laser</summary>
+                    <summary>Laser</summary>
                     <div class="saldo">
+                        <div class="banner">
+                            <a href="#">
+                                <img src="./img/bookmark.svg" alt="">
+                            </a>
+                        </div>
                         <span>Meta:</span>
-                        <p>R$600,00</p> <br>
+                        <p>R$600,00</p>
                         <span>Já gastou:</span>
-                        <p>R$290,00</p> <br>
+                        <p>R$290,00</p>
                         <span>Limite ultrapassado:</span>
                         <p>R$0,00</p>
                     </div>
@@ -122,12 +134,17 @@
             <!-- Seção Saúde -->
             <div class="container-saude">
                 <details>
-                    <summary>saúde</summary>
+                    <summary>Saúde</summary>
                     <div class="saldo">
+                        <div class="banner">
+                            <a href="#">
+                                <img src="./img/bookmark.svg" alt="">
+                            </a>
+                        </div>
                         <span>Meta:</span>
-                        <p>R$600,00</p> <br>
+                        <p>R$600,00</p>
                         <span>Já gastou:</span>
-                        <p>R$290,00</p> <br>
+                        <p>R$290,00</p>
                         <span>Limite ultrapassado:</span>
                         <p>R$0,00</p>
                     </div>
@@ -143,12 +160,17 @@
             <!-- Seção Transporte -->
             <div class="container-transporte">
                 <details>
-                    <summary>transporte</summary>
+                    <summary>Transporte</summary>
                     <div class="saldo">
+                        <div class="banner">
+                            <a href="#">
+                                <img src="./img/bookmark.svg" alt="">
+                            </a>
+                        </div>
                         <span>Meta:</span>
-                        <p>R$600,00</p> <br>
+                        <p>R$600,00</p>
                         <span>Já gastou:</span>
-                        <p>R$290,00</p> <br>
+                        <p>R$290,00</p>
                         <span>Limite ultrapassado:</span>
                         <p>R$0,00</p>
                     </div>
@@ -163,12 +185,17 @@
             <!-- Seção Contas a Pagar -->
             <div class="container-contas-a-pagar">
                 <details>
-                    <summary>contas a pagar</summary>
+                    <summary>Contas a pagar</summary>
                     <div class="saldo">
+                        <div class="banner">
+                            <a href="#">
+                                <img src="./img/bookmark.svg" alt="">
+                            </a>
+                        </div>
                         <span>Meta:</span>
-                        <p>R$600,00</p> <br>
+                        <p>R$600,00</p>
                         <span>Já gastou:</span>
-                        <p>R$290,00</p> <br>
+                        <p>R$290,00</p>
                         <span>Limite ultrapassado:</span>
                         <p>R$0,00</p>
                     </div>
@@ -184,12 +211,17 @@
             <!-- Seção Mercado -->
             <div class="container-mercado">
                 <details>
-                    <summary>mercado</summary>
+                    <summary>Mercado</summary>
                     <div class="saldo">
+                        <div class="banner">
+                            <a href="#">
+                                <img src="./img/bookmark.svg" alt="">
+                            </a>
+                        </div>
                         <span>Meta:</span>
-                        <p>R$600,00</p> <br>
+                        <p>R$600,00</p>
                         <span>Já gastou:</span>
-                        <p>R$290,00</p> <br>
+                        <p>R$290,00</p>
                         <span>Limite ultrapassado:</span>
                         <p>R$0,00</p>
                     </div>
